# zerocheck

./: .gitignore  Cargo.toml  README.md  run_tests_cambridge.sh
.github/workflow/: ci.yml
benchmarks/: bench_main.rs
benchmarks/benches/: mod.rs  uni_naive_bench.rs  uni_opt_bench.rs
examples/: univar_proof_gen.rs
hardware_experiments/: fourstep_ntt_perf_models.py  fourstep_ntt_perf_models_mo.py  helper_funcs.py  ntt_func_sim.py  params.py  params_ntt_v_sum.py  plot_funcs.py  poly_list.py  quick_test.sh  sram_budget_plot.py  sumcheck_NTT_sweep.py  sumcheck_iso_hw_comparison_new.py  sumcheck_miniNTT_partial_sweep.py  sumcheck_miniNTT_sweep.py  sumcheck_models.py  sumcheck_on_diff_polys_no.py  sumcheck_sweep_mo.py  sumcheck_sweep_no.py  test_ntt_func_sim.py
hardware_experiments/prog_sumcheck/: helper_funcs.py  sumcheck_on_diff_polys_mo.py  test_diff_polys.py
scripts/: plot_opt_uni_zc.py
src/: lib.rs  utils.rs
src/multilinear_zc/: mod.rs
src/multilinear_zc/naive/: data_structures.rs  mod.rs
src/multilinear_zc/naive/sumcheck_protocol/: mod.rs  prover.rs  verifier.rs
src/multilinear_zc/optimized/: data_structures.rs  mod.rs
src/multilinear_zc/optimized/sumcheck/: mod.rs  prover.rs  verifier.rs
src/pcs/: mod.rs
src/pcs/multilinear_pcs/: mod.rs
src/pcs/multilinear_pcs/hyrax/: data_structures.rs  mod.rs  poseidon_config.rs
src/pcs/multilinear_pcs/kzg/: mod.rs
src/pcs/multilinear_pcs/ligero/: data_structures.rs  merkle_config.rs  mod.rs  poseidon_config.rs  sha256_config  sha256_config.rs
src/pcs/multilinear_pcs/mpc/: mod.rs
src/pcs/univariate_pcs/: mod.rs
src/pcs/univariate_pcs/kzg/: data_structures.rs  mod.rs
src/pcs/univariate_pcs/kzg_offloaded/: data_structures.rs  mod.rs
src/pcs/univariate_pcs/kzg_offloaded/commit_offloaded/: mod.rs
src/pcs/univariate_pcs/ligero/: data_structures.rs  merkle_config.rs  mod.rs  poseidon_config.rs  sha256_config.rs
src/pcs/univariate_pcs/msm_uncheck_kzg/: mod.rs
src/pcs/univariate_pcs/msm_uncheck_kzg/my_kzg10/: mod.rs
src/transcripts/: mod.rs
src/univariate_zc/naive/: data_structures.rs  mod.rs
src/univariate_zc/optimized/: data_structures.rs  mod.rs
src/zc/: mod.rs
src/zc/multilinear_zc/: mod.rs
src/zc/multilinear_zc/naive/: data_structures.rs  mod.rs
src/zc/multilinear_zc/naive/sumcheck_protocol/: prover.rs  verifier.rs
src/zc/multilinear_zc/offloaded/: data_structures.rs  mod.rs
src/zc/multilinear_zc/offloaded/sumcheck/: mod.rs  prover.rs  verifier.rs
src/zc/multilinear_zc/optimized/: data_structures.rs  mod.rs  parser.rs
src/zc/multilinear_zc/optimized/sumcheck/: prover.rs  verifier.rs
src/zc/univariate_zc/: mod.rs
src/zc/univariate_zc/custom/: data_structures.rs  mod.rs  parser.rs
src/zc/univariate_zc/naive/: data_structures.rs  mod.rs
src/zc/univariate_zc/optimized/: data_structures.rs  mod.rs
tests/: naive_ml_zc_tests.rs  naive_uni_zc_tests.rs  op_ml_ligero_tests.rs  op_uni_ligero_tests.rs  opt_ml_zc_tests.rs  opt_uni_zc_tests.rs  opt_uni_zc_tests_multhr.rs  run_tests.sh
