[package]
name = "zerocheck"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "*"
ark-ff = { version = "^0.5.0", default-features = false }
ark-poly = {version = "^0.5.0"}
ark-std = { version = "^0.5.0", default-features = false }
ark-crypto-primitives = {version = "^0.5.0", default-features = false, features = ["crh", "prf"]}
ark-poly-commit = { version = "^0.5.0", default-features = false}
ark-ec = { version = "^0.5.0", default-features = false}
ark-bls12-381 ={ version = "0.5.0", default-features = false, features = [ "curve" ]}
num-traits = "0.2"
