[package]
name = "zerocheck"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "*"
ark-ff = { version = "^0.5.0", default-features = false, features = ["parallel", "std"] }
ark-poly = {version = "^0.5.0", features = ["parallel", "std"] }
ark-std = { version = "^0.5.0", default-features = false, features = ["parallel", "std", "print-trace"] }
ark-crypto-primitives = {version = "^0.5.0", default-features = false, features = ["crh", "prf", "parallel", "std"]}
ark-poly-commit = { version = "^0.5.0", default-features = false, features = ["parallel", "std"] }
ark-ec = { version = "^0.5.0", default-features = false, features = ["parallel", "std"] }
ark-bls12-381 ={ version = "0.5.0", default-features = false, features = [ "curve" ]}
num-traits = "0.2"
rayon = "1.8"
itertools = "0.8"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench_main"
harness = false
path = "benchmarks/bench_main.rs"


[[bin]]
name = "univar_opt_bench_multhr"
harness = false
path = "bin/univar_opt_bench_multhr.rs"