[package]
name = "zerocheck"
version = "0.1.0"
edition = "2021"

[alias]
lint = "clippy -- -D warnings"
format = "fmt"

[dependencies]
anyhow = "1.0.97"
ark-ff = { version = "^0.5.0", default-features = false, features = ["parallel", "std"] }
ark-poly = {version = "^0.5.0", features = ["parallel", "std"] }
ark-std = { version = "^0.5.0", default-features = false, features = ["parallel", "std", "print-trace"] }
ark-crypto-primitives = {version = "^0.5.0", default-features = false, features = ["crh", "prf", "parallel", "std"]}
ark-poly-commit = { git = "https://github.com/beekayg15/poly-commit"}
ark-ec = { version = "^0.5.0", default-features = false, features = ["parallel", "std"] }
ark-bls12-381 ={ version = "0.5.0", default-features = false, features = [ "curve" ]}
num-traits = "0.2"
rayon = { version = "1.8", default-features = false, optional = true }
itertools = { version = "0.14.0", optional = true }
clap = { version = "4", features = ["derive"] }
ark-serialize =  { version = "^0.5.0", default-features = false }
merlin = { version = "3.0.0", default-features = false }
displaydoc = { version = "0.2.3", default-features = false }
sha3 = { version = "0.10.8", default-features = false }
ark-ed-on-bls12-381 ={ version = "0.5.0", default-features = false}
sha2 = "0.10"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench_main"
harness = false
path = "benchmarks/bench_main.rs"

[features]
default = ["parallel"]
# extensive sanity checks that are useful for debugging
extensive_sanity_checks = [ ]
parallel = [ 
    "rayon",
    "itertools",
    "ark-std/parallel", 
    "ark-ff/parallel",  
    "ark-poly/parallel", 
    "ark-ec/parallel",
]

[[bin]]
name = "univar_opt_bench_multhr"
harness = false
path = "bin/univar_opt_bench_multhr.rs"

[[bin]]
name = "mullin_naive_bench_multhr"
harness = false
path = "bin/mullin_naive_bench_multhr.rs"

[[bin]]
name = "mullin_opt_bench_multhr"
harness = false
path = "bin/mullin_opt_bench_multhr.rs"